feat: added java flags